gcc/testsuite/gm2/iso/const/fail/testfloat.mod
MODULE testfloat ;

CONST
   foo = FLOAT (c) ;

VAR
   c: CARDINAL ;
BEGIN

END testfloat.
